--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
    
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#portfolio">Blog</a></li>
       
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -295,7 +295,7 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/Modern Farm.jpg" alt="" class="img-fluid">
+                <img src="assets/img/portfolio/organic-78920_1280.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div><!-- End Tab Content Item -->
@@ -459,7 +459,8 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Explore some of our completed and ongoing agricultural projects. From sustainable plantations to innovative poultry and organic farming, we’ve helped farmers transform their ideas
+           into profitable, eco-friendly venture</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -479,14 +480,14 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                <!-- Portfolio Card -->
-<div class="col-md-4 mb-4">
+<div class="col-md-4 mb-4" >
   <div class="card h-100 shadow-sm border-0">
-   <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+   <div class="card" style="width: 18rem;"data-aos="fade-up">
+  <img src="assets/img/cambodia-6877976_1280.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Palm Oil Plantation</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
  
@@ -498,13 +499,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                 <div class="card" style="width: 18rem;"data-aos="fade-up">
+  <img src="assets/img/portfolio/organic-78920_1280.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Organic Vegetable Farm</h5>
     <p class="card-text">Producing fresh, chemical-free vegetables using eco-friendly methods to promote healthier 
       living and soil protection</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -512,13 +513,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-              <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+              <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/chicks-1566724_1280.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Layer Production Farm</h5>
     <p class="card-text">A modern egg production system designed for efficiency, hygiene, and consistent 
       high-quality output</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -526,13 +527,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;" data-aos="fade-up" >
+  <img src="assets/img/portfolio/beekeeping-4232534_1280.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Honey Production Farm</h5>
     <p class="card-text">Setting up modern apiaries to produce pure natural honey and create sustainable 
       income for rural farmers.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -540,13 +541,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-               <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+               <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/beautiful-landscape.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Cocoa Plantation</h5>
     <p class="card-text">A well-managed cocoa plantation project focusing on organic cultivation, high yield, and
        quality beans for international trade.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -554,13 +555,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                   <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                   <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/close-up-picture-hand-holding-planting-sapling-plant.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Soil Fertility Improvement</h5>
     <p class="card-text">A natural soil management program using compost and green manure to restore soil 
       nutrients and boost productivity</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -568,12 +569,12 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-              <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+              <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/young-farmer-taking-care-his-business.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Broiler Growth Program</h5>
     <p class="card-text">Implementing innovative feeding and housing techniques to achieve rapid, healthy broiler growth.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -581,12 +582,12 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                 <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/closeup-shot-bees-farm.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Beekeeping Training Initiative</h5>
     <p class="card-text">A hands-on program that equips young and local farmers with practical skills in modern beekeeping</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -594,12 +595,12 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/rubber-tree-bowl-filled-with-latex.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Rubber Plantation</h5>
     <p class="card-text">Establishing large-scale rubber plantations that support industrial use and provide income for local communities</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -607,13 +608,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/succulent-plants.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Compost Production Project</h5>
     <p class="card-text">Turning agricultural waste into organic compost that supports local farmers
        and reduces environmental impact</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -621,12 +622,12 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-               <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+               <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/brown-chickens-farm.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Hatchery Development Project</h5>
     <p class="card-text">Creating advanced hatcheries that supply quality chicks to farmers and enhance the poultry value chain</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -634,13 +635,13 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-             <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+             <div class="card" style="width: 18rem;" data-aos="fade-up">
+  <img src="assets/img/portfolio/closeup-shot-bees-farm.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Bee Hive Expansion Projec</h5>
     <p class="card-text">Expanding beehive installations to increase honey yield and promote pollination in
        nearby farms</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+   <a href="#" class="btn btn-primary" style="background-color: rgb(9, 71, 18); border: none;">View More</a>
   </div>
 </div>
               </div>
@@ -1071,8 +1072,8 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
+            <li><a href="#">Farm Management</a></li>
+            <li><a href="#">Gear-wide-connected</a></li>
             <li><a href="#">Product Management</a></li>
             <li><a href="#">Marketing</a></li>
             <li><a href="#">Graphic Design</a></li>
