--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Agrinova | Empowering Farmers with Smart Farming Solutions</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Discover AgriNova — your trusted partner in smart and sustainable agriculture. From crop management to modern farming tools, 
+  we make farming easier, better, and more profitable">
+  <meta name="keywords" content="AgriNova, smart farming, sustainable agriculture, modern farming, farm technology, 
+  organic crops, agritech, agriculture business">
 
   <!-- Favicons -->
   <link href="assets/img/AgriNova.png" rel="icon">
@@ -1002,7 +1004,7 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
           </div>
 
           <div class="col-lg-6">
-            <form action="" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">
+            <form action="https://usebasin.com/f/a12dbee8e6b1" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -1022,15 +1024,15 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+          
 
                   <button type="submit">Send Message</button>
                 </div>
 
               </div>
             </form>
+    
+
           </div><!-- End Contact Form -->
 
         </div>
@@ -1054,10 +1056,10 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
         <span>AgriNova</span>
       </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p> A108 Adam Street, Abuja, Nigeria</p>
+
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 708659921</span></p>
+            <p><strong>Email:</strong> <span> info@afrinova.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -1093,11 +1095,9 @@ With a team of experts in agri-engineering, irrigation systems, and farm managem
         <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-          <form action="forms/newsletter.php" method="post" class="php-email-form">
+          <form action="" method="post" class="php-email-form">
             <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+
           </form>
         </div>
 
